# mcp-workshop

./: .env.example  DUMMY_SERVER_README.md  README.md  demo.py  pyproject.toml  run_server.py  test_server.py
src/: main.py
src/dummy_server/: __init__.py  config.py  models.py  server.py  storage.py
