[tool.poetry]
name = "mcp-workshop"
version = "0.1.0"
description = "MCP Workshop Project"
authors = ["Vladislav Vorobev <vladislav.vorobev@epam.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
